src/scss/main.scss
/* ... */
.finished {
    color: $green;
}

.draggable {
    cursor: move;
}

/* fix for bootstrap's thumbnail class */
.thumbnail {
    overflow: hidden;
    overflow-wrap: break-word;
}

.thumb {
    font-size: 100px !important;
    height: 100px;
    min-height: 50px;
    min-width: 50px;
    width: 100px;
}

/* highlight on hover: for editable/malleable elements
 * it's $elabblue but less opaque
 */
.hl-hover:hover {
    background-color: rgba(41, 174, 185, 0.5);
}

.hl-hover-gray:hover {
    background-color: $firstlevel;
}

/* COMMENTS */
.comment-header {
    background-color: $firstlevel;
}


/* END COMMENTS */

@mixin breakable {
    hyphens: auto;
    line-height: 110%;
    overflow-wrap: break-word;
    word-break: break-word;
}

.breakable {
    @include breakable;
}

/* TITLE */
/* add several rules for the word-wrap, see https://stackoverflow.com/a/36555643 */
.title {
    @include breakable;
    font-size: 160%;

    a {
        color: $mediumstrong;

        &:hover {
            color: $secondlevel;
        }
    }
}

/* for icons such as pin, need important to override default icon color */
.color-weak {
    color: $secondlevel !important;
}

.color-medium {
    color: $medium;
}

.color-white {
    color: $white !important;
}

.color-success {
    color: $elabblue !important;
}

.color-danger {
    color: $dangerred !important;
}

.border-danger {
    border: 1px solid $lightred !important;
}

.color-warning {
    color: #856404 !important;
}

.togglable-section-title {
    color: $medium;
    font-size: 100%;
    font-weight: bold;
    text-transform: uppercase;
}

.category-button {
    background-color: var(--bg);
    color: $white;
    font-size: 75%;
    font-weight: bold;
    text-transform: uppercase;
}

.smallgray {
    color: $medium;
    font-size: 80%;
}

/* ucp.php */
#currpass {
    background-color: $lightblue;
    border: 1px solid $elabblue;
}

.edit-mode-label {
    min-width: 93px;

    @media (max-width: 992px) {
        min-width: 0;
    }
}

/* elabid */
.elabid {
    color: $medium;
    overflow-wrap: break-word;
}

/* TAGS */
.tag {
    background-color: $firstlevel;
    border-radius: 5px;
    color: $mediumstrong;
    font: bold 80% Verdana, Arial, Helvetica, sans-serif;
    padding: 2px 5px;

    &:hover {
        background-color: $mediumstrong;
        color: $white !important;
    }

    &.favorite {
        background-color: $gold;
    }
}

.box {
    background-color: $white;
}

/* background for archived users */
.bg-medium {
    background-color: $secondlevel;
}

/* print only the main div */
@media print {
    /* overwrite bootstrap defaults
     * https://stackoverflow.com/a/53232790
     */
    body {
        min-width: 0 !important;
    }

    /* don't print all that stuff */
    nav,
    footer,
    #menu,
    #filesdiv,
    #commentsDiv,
    #withSelected,
    .item-info > .clickable,
    .real-container > span,
    .real-container > hr,
    .real-container > form,
    .col-md-10,
    .col-md-2,
    .smallgray,
    .page-buttons {
        display: none !important;
    }

    .container {
        min-width: 0 !important;
        width: auto;
    }

    .real-container {
        margin: auto;
        padding: 0;
    }

    .real-container::after {
        content: 'Powered by eLabFTW ❤ www.elabftw.net';
        display: block;
        margin-top: 0.5rem;
        text-align: center;
    }

    .real-container .row:last-child {
        display: block;
        margin-top: 0.5rem;
    }

    .real-container .row:last-child .col-6 {
        max-width: 100%;
        padding: 0;
    }

    .elabid {
        text-align: left;
    }

    .title,
    .item-next,
    .item-info {
        padding-left: 5px !important;
    }

    .title a {
        text-decoration: none !important;
    }

    .item {
        background-color: #fff;
        font-size: 14px;
        line-height: normal;
        margin: 0;
        margin-top: 2px;
        padding: 5px;
    }

    #itemList {
        display: block;
    }

    #itemList > div {
        display: block;
        max-width: 95% !important;
    }

    section > div {
        margin: 0 !important;
        padding: 5px;
        width: 100% !important;
    }

    #body_view {
        border: 0;
    }

    #itemList section {
        break-inside: avoid;
    }
}

// raise above .viewer-ove
.thumbnail > .dropdown {
    position: relative;
    z-index: 10;
}

/* eye overlay for uploaded file icons */
.eye-overlay {
    display: block;
    position: relative;
}

.eye-overlay:hover::after {
    background-color: $medium;
    color: $white;
    content: '\f06e';
    display: block;
    font-family: 'Font Awesome 6 Free';
    font-size: 3em;
    font-weight: 900;
    left: 50%;
    margin-left: -33px; // half width
    position: absolute;
    text-align: center;
    top: 37px;
    width: 66px;
}

/* fix the canvas for 3Dmoljs uploaded files */
/* stylelint-disable-next-line selector-class-pattern */
.viewer_3Dmoljs {
    height: 250px;
    position: relative;
    width: 100%;
}

/* make dropzone blue border on hover */
.dropzone {
    border: 1px solid $white;

    &:hover {
        border: 1px solid $elabblue;
    }
}

.clickable:hover,
.editable:hover,
[data-action] {
    cursor: pointer;
}

/* trash icon is red on hover */
.fa-trash-alt:hover {
    color: $darkred;
    transition: color 0.8s ease;
}

/*
 * font awesome icons color
 * don't register clicks with the fontawesome icons
 * this way the click event is registered by the parent and all is well
 */
.far,
.fas,
.fab {
    color: $medium;
    pointer-events: none;
}

.fa-bell.active {
    color: $elabblue;
}

/* caption for tinymce */
.image {
    background: #f5f2f0;
    border: 1px solid $medium;
    display: inline-block;
    margin: 0 2px 0 1px;
}

.image img {
    margin: 8px 8px 0;
}

.image figcaption {
    margin: 6px 8px;
    text-align: center;
}

/* make the markdown editor full width */
.markdown-textarea {
    width: 100%;
}
/* ... */

